# digitalocean-dyndns

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  cliff.toml  diesel.toml  do_ddns.sample.toml  mise.toml
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: changelog_conf.json  renovate.json
.github/actions/create_archive/: action.yaml
.github/workflows/: audit.yaml  ci.yaml  docker_containers.yaml  release.yaml
config/: do_ddns.sample.toml
crates/axum-jsonschema/: Cargo.toml
crates/axum-jsonschema/src/: lib.rs
crates/dyndns/: Cargo.toml  build.rs
crates/dyndns/migrations/2021-02-24-120339_stats/: down.sql  up.sql
crates/dyndns/src/: build_info.rs  cli.rs  commands.rs  config.rs  config_builder.rs  config_consts.rs  config_early.rs  daemon.rs  digital_ocean_token.rs  global_state.rs  hetzner_token.rs  ip_fetcher.rs  lib.rs  logger.rs  main.rs  signal_handlers.rs  stats_handler.rs  stats_handler_db.rs  token.rs  types.rs  updater.rs
crates/dyndns/src/config/: app_config.rs  app_config_builder.rs  config_builder.rs  consts.rs  early.rs  mod.rs  provider_config.rs
crates/dyndns/src/db/: logic.rs  mod.rs  schema.rs  setup.rs  sqlite_mapping.rs  types.rs
crates/dyndns/src/db/crud/: domain_ip_fetches.rs  domain_ip_last_fetches.rs  domain_record_ip_changes.rs  domain_record_last_updates.rs  domain_record_updates.rs  domain_records.rs  mod.rs  updater_attempts.rs
crates/dyndns/src/domain_record_api/: cloudflare_api.rs  desec_api.rs  digital_ocean.rs  digital_ocean_api.rs  hetzner_api.rs  mod.rs
crates/dyndns/src/web/: addresses.rs  docs.rs  errors.rs  mod.rs  routes.rs  server.rs  static_server.rs
crates/dyndns/src/web/routes/: domain_record_ip_changes.rs  version.rs
crates/dyndns/tests/: config_parsing.rs
crates/dyndns/tests/data/: sample_cloudflare_dns_records_response.json  sample_desec_rrsets_response.json  sample_hetzner_rrsets_response.json
docker/: aarch64-unknown-linux-musl.Dockerfile  armv7-unknown-linux-musleabihf.Dockerfile  docker-compose.yaml  x86_64-unknown-linux-musl.Dockerfile
docs/: HETZNER_MIGRATION.md
docs/plans/: 2026-01-08-hetzner-cloud-api-migration-design.md
src/: build_info.rs  cli.rs  config.rs  config_builder.rs  config_consts.rs  config_early.rs  domain_updater.rs  humantime_wrapper_serde.rs  ip_fetcher.rs  lib.rs  logger.rs  main.rs  signal_handlers.rs  token.rs  types.rs  updater.rs
src/domain_record_api/: digital_ocean.rs  mod.rs
tasks/: bump-version
tests/data/: sample_list_domain_records_response.json
webclients/svelte/: .eslintrc.cjs  README.md  eslint.config.js  package-lock.json  package.json  setupTest.js  svelte.config.js  vite.config.ts
webclients/svelte/src/: app.html  app.scss  variables.scss
webclients/svelte/src/components/: DomainRecordIpChanges.svelte  DomainRecordIpChanges.test.ts  NavBar.svelte  PageHeader.svelte  TestComponentParentWrapper.svelte  VersionDisplay.svelte
webclients/svelte/src/routes/: +layout.svelte  +layout.ts  +page.svelte
webclients/svelte/src/services/: zodios.ts  zodius.ts
webclients/svelte/src/stores/: DomainRecordIpChangesStore.ts  VersionStore.ts
