[package]
name = "axum-jsonschema"
version = "0.9.0"
edition = "2021"
authors = ["tamasfe"]
keywords = ["web", "axum", "json"]
repository = "https://github.com/tamasfe/aide"
license = "MIT OR Apache-2.0"
description = "Request JSON schema validation for axum"
readme = "README.md"

[dependencies]
aide = { workspace = true, optional = true, features = [
    "axum-json",
] }
axum = { workspace = true, features = ["json"] }
http = { workspace = true }
itertools = { workspace = true }
jsonschema = { version = "0.32.1", default-features = false }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.17"
tracing = { workspace = true }
