[package]
name = "digitalocean-dyndns"
version = "0.0.6"
edition = "2018"
description = "Dynamic DNS using DigitalOcean's DNS API"
readme = "README.md"
repository = "https://github.com/alcroito/digitalocean-dyndns"
license = "MIT"
keywords = ["dyndns", "digitalocean"]
publish = false
build = "build.rs"

[[bin]]
name = "do_ddns"
path = "src/main.rs"

[lib]
name = "do_ddns"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde", "clock"] }
clap = { version = "4", features = ["cargo"] }
color-eyre = "0.6"
humantime = "2"
native-tls = { version = "0.2", features = ["vendored"] }
once_cell = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }
toml = "0.7"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"
trust-dns-resolver = "0.22"

[build-dependencies]
# Keep anyhow, because vergen depends on it.
anyhow = "1"
vergen = "7"

[dev-dependencies]
tempfile = "3"
