[package]
name = "digitalocean-dyndns"
version = "0.6.0"
edition = "2021"
description = "Dynamic DNS using DigitalOcean's DNS API"
readme = "README.md"
repository = "https://github.com/alcroito/digitalocean-dyndns"
license = "MIT"
keywords = ["dyndns", "digitalocean"]
publish = false
build = "build.rs"

[[bin]]
name = "do_ddns"
path = "src/main.rs"

[lib]
name = "do_ddns"
path = "src/lib.rs"

[features]
default = []
stats = ["diesel", "diesel_migrations", "libsqlite3-sys"]
debug_static_embedded = ["web", "rust-embed/debug-embed"]
web = [
    "stats",
    "aide",
    "axum",
    "axum-jsonschema",
    "axum-macros",
    "http",
    "hyper",
    "mime_guess",
    "rust-embed",
    "schemars",
    "tower",
    "tower-http",
    "tokio",
]

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "serde",
    "clock",
] }
clap = { version = "4", features = ["cargo", "derive"] }
color-eyre = "0.6"
figment = { version = "0.10", features = ["env", "toml", "test"] }
figment_file_provider_adapter = "0.1"
humantime = "2"
humantime-serde = "1"
itertools = "0.11"
native-tls = { version = "0.2", features = ["vendored"] }
once_cell = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_with = "3"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }
tailsome = "1"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"
trust-dns-resolver = "0.23"

# Stats feature dependencies
cfg-if = "1"
diesel = { version = "2", features = ["sqlite", "chrono"], optional = true }
diesel_migrations = { version = "2", features = ["sqlite"], optional = true }
directories = "5"
libsqlite3-sys = { version = "0.26", features = ["bundled"], optional = true }

# Web server dependencies
aide = { git = "https://github.com/tamasfe/aide", version = "0.12", optional = true, features = [
    "redoc",
    "axum",
    "axum-extra",
    "macros",
] }
axum = { version = "0.6", optional = true }
axum-jsonschema = { git = "https://github.com/tamasfe/aide", version = "0.7", optional = true, features = [
    "aide",
] }
axum-macros = { version = "0.3", optional = true }
http = { version = "0.2", optional = true }
hyper = { version = "0.14", optional = true }
mime_guess = { version = "2", optional = true }
rust-embed = { version = "8", features = ["debug-embed"], optional = true }
schemars = { version = "0.8", optional = true, features = ["chrono"] }
tower = { version = "0.4", features = ["full"], optional = true }
tower-http = { version = "0.4", features = ["full"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[build-dependencies]
# Keep anyhow, because vergen depends on it.
anyhow = "1"
vergen = { version = "8", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si",
] }

[dev-dependencies]
tempfile = "3"
