[package]
name = "digitalocean-dyndns"
version = "0.7.0"
edition = "2021"
license.workspace = true
rust-version.workspace = true
description = "Dynamic DNS using DigitalOcean's DNS API"
readme = "README.md"
repository = "https://github.com/alcroito/digitalocean-dyndns"
keywords = ["dyndns", "digitalocean"]
publish = false
build = "build.rs"

[[bin]]
name = "do_ddns"
path = "src/main.rs"

[lib]
name = "do_ddns"
path = "src/lib.rs"

[features]
default = []
stats = ["diesel", "diesel_migrations", "libsqlite3-sys"]
debug_static_embedded = ["web", "rust-embed/debug-embed"]
web = [
    "stats",
    "aide",
    "axum",
    "axum-jsonschema",
    "axum-macros",
    "futures-util",
    "http",
    "hyper",
    "hyper-util",
    "mime_guess",
    "rust-embed",
    "schemars",
    "tower",
    "tower-http",
]

[dependencies]
chrono = { workspace = true, default-features = false, features = [
    "alloc",
    "serde",
    "clock",
] }
clap = { workspace = true, features = ["cargo", "derive"] }
color-eyre.workspace = true
figment = { workspace = true, features = ["env", "toml", "test"] }
figment_file_provider_adapter.workspace = true
hickory-resolver.workspace = true
humantime.workspace = true
humantime-serde.workspace = true
itertools.workspace = true
native-tls = { workspace = true, features = ["vendored"] }
once_cell.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
serde_with.workspace = true
signal-hook = { workspace = true, features = ["extended-siginfo"] }
tailsome.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

# Stats feature dependencies
cfg-if.workspace = true
diesel = { workspace = true, features = ["sqlite", "chrono"], optional = true }
diesel_migrations = { workspace = true, features = ["sqlite"], optional = true }
directories.workspace = true
libsqlite3-sys = { workspace = true, features = ["bundled"], optional = true }

# Web server dependencies
aide = { workspace = true, optional = true, features = [
    "redoc",
    "axum",
    "axum-extra",
    "macros",
] }
axum = { workspace = true, optional = true }
axum-jsonschema = { path = "../axum-jsonschema", optional = true, features = ["aide"] }
axum-macros = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
http = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
rust-embed = { workspace = true, features = ["debug-embed"], optional = true }
schemars = { workspace = true, optional = true, features = ["chrono04"] }
tower = { workspace = true, features = ["full"], optional = true }
tower-http = { workspace = true, features = ["full"], optional = true }

[build-dependencies]
# Keep anyhow, because vergen depends on it.
anyhow.workspace = true
vergen-gitcl = { workspace = true, features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
